@@ -1,3 +1,7 @@
+2001-10-25  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Msg/Control/AMS.pm: Use ADAM_NOPROMPT to turn off prompting
+
 2001-10-18  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Recipe.pm (_parse_recursively): Should not have croak in output
